--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.8.0",
     "html5-qrcode": "^2.3.8",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
